Add new feature

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="img-wrapper">
             <div class="img-box home-img">
-              <img src="samridhi.jpg" alt="" />
+              <img src="images/samridhi.jpg" alt="" />
             </div>
           </div>
         </section>
@@ -122,133 +122,371 @@
             <div class="tab-grid resume-box experinence active">
               <div class="tab-item resume-item">
                 <h4>2022 - Present</h4>
-                <h4>Frontend Developer </h4>
+                <h4>Frontend Developer</h4>
                 <h4>Fresher</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, eum.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+                  eum.
+                </p>
               </div>
-               <div class="tab-item resume-item">
+              <div class="tab-item resume-item">
                 <h4>2023 - Present</h4>
-                <h4>Frontend Developer  </h4>
+                <h4>Frontend Developer</h4>
                 <h4>Fresher</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, explicabo?</p>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. In,
+                  explicabo?
+                </p>
               </div>
-               <div class="tab-item resume-item">
+              <div class="tab-item resume-item">
                 <h4>2024 - Present</h4>
-                <h4>UI/UX Designer </h4>
+                <h4>UI/UX Designer</h4>
                 <h4>Fresher</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, nobis.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Distinctio, nobis.
+                </p>
               </div>
-               <div class="tab-item resume-item">
+              <div class="tab-item resume-item">
                 <h4>2024 - Present</h4>
-                <h4>Web Developer </h4>
+                <h4>Web Developer</h4>
                 <h4>Fresher</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, sequi.</p>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Blanditiis, sequi.
+                </p>
               </div>
-               <div class="tab-item resume-item">
+              <div class="tab-item resume-item">
                 <h4>2025 - Present</h4>
-                <h4>Junior Developer </h4>
+                <h4>Junior Developer</h4>
                 <h4>Fresher</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, praesentium?</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Rerum, praesentium?
+                </p>
               </div>
-               <div class="tab-item resume-item">
+              <div class="tab-item resume-item">
                 <h4>2025 - Present</h4>
-                <h4>Web Developer </h4>
+                <h4>Web Developer</h4>
                 <h4>Fresher</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, repellat?</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Eaque, repellat?
+                </p>
               </div>
             </div>
 
             <div class="tab-grid resume-box skills">
               <div class="tab-item resume-item">
-                <i class='bx bxl-html5'></i>
+                <i class="bx bxl-html5"></i>
                 <p>HTML5</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-css3' ></i>
+                <i class="bx bxl-css3"></i>
                 <p>CSS3</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-javascript' ></i>
-               <p>Javascript</p>
+                <i class="bx bxl-javascript"></i>
+                <p>Javascript</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-react' ></i>
+                <i class="bx bxl-react"></i>
                 <p>React js</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-nodejs' ></i>
+                <i class="bx bxl-nodejs"></i>
                 <p>Node js</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-tailwind-css' ></i>
+                <i class="bx bxl-tailwind-css"></i>
                 <p>Tailwind CSS</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-bootstrap' ></i>
+                <i class="bx bxl-bootstrap"></i>
                 <p>Bootstrap</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-angular' ></i>
+                <i class="bx bxl-angular"></i>
                 <p>Angular</p>
-              </div> 
+              </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-c-plus-plus'></i>
+                <i class="bx bxl-c-plus-plus"></i>
                 <p>c</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-c-plus-plus'></i>
+                <i class="bx bxl-c-plus-plus"></i>
                 <p>C++</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-python' ></i>
+                <i class="bx bxl-python"></i>
                 <p>Python</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-java' ></i>
+                <i class="bx bxl-java"></i>
                 <p>Java</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-php' ></i>
+                <i class="bx bxl-php"></i>
                 <p>PHP</p>
               </div>
-                <div class="tab-item resume-item">
-                <i class='bx bxl-django' ></i>
+              <div class="tab-item resume-item">
+                <i class="bx bxl-django"></i>
                 <p>Django</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-flask' ></i>
+                <i class="bx bxl-flask"></i>
                 <p>Flask</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-mongodb' ></i>
+                <i class="bx bxl-mongodb"></i>
                 <p>MongoDB</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-postgresql' ></i>
+                <i class="bx bxl-postgresql"></i>
                 <p>PostgreSQL</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-sketch' ></i>
+                <i class="bx bxl-sketch"></i>
                 <p>Sketch</p>
               </div>
               <div class="tab-item resume-item">
-                <i class='bx bxl-figma' ></i>
+                <i class="bx bxl-figma"></i>
                 <p>Figma</p>
               </div>
-
-            
             </div>
 
             <div class="tab-grid resume-box education">
               <div class="tab-item resume-item">
-                <p>education TEST</p>
+                <h4>2024</h4>
+                <h4>Programming Course</h4>
+                <h4>Online Course</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Saepe quos qui accusantium eius possimus veniam earum quo
+                  ducimus, nam natus.
+                </p>
+              </div>
+              <div class="tab-item resume-item">
+                <h4>2022 - 2023</h4>
+                <h4>Web Development Bootcamp</h4>
+                <h4>Online Course Platform</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Saepe quos qui accusantium eius possimus veniam earum quo
+                  ducimus, nam natus.
+                </p>
+              </div>
+              <div class="tab-item resume-item">
+                <h4>2024</h4>
+                <h4>Certified Web Development</h4>
+                <h4>Online Course</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Saepe quos qui accusantium eius possimus veniam earum quo
+                  ducimus, nam natus.
+                </p>
+              </div>
+              <div class="tab-item resume-item">
+                <h4>2021 - 2024</h4>
+                <h4>Graduate BCA</h4>
+                <h4>Indira Gandhi National Open University</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Saepe quos qui accusantium eius possimus veniam earum quo
+                  ducimus, nam natus.
+                </p>
+              </div>
+              <div class="tab-item resume-item">
+                <h4>2019-2020</h4>
+                <h4>10th Pass</h4>
+                <h4>CBSE</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Saepe quos qui accusantium eius possimus veniam earum quo
+                  ducimus, nam natus.
+                </p>
+              </div>
+              <div class="tab-item resume-item">
+                <h4>2020-2021</h4>
+                <h4>12th Pass</h4>
+                <h4>CBSE</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Saepe quos qui accusantium eius possimus veniam earum quo
+                  ducimus, nam natus.
+                </p>
               </div>
             </div>
-
-            
           </div>
         </section>
-        <!--portfolio (work,service)b section-->
+        <!--portfolio (work,service) section-->
+        <section class="section portfolio">
+          <h2 class="title">Portfolio</h2>
+          <div class="tab-box">
+            <div class="tab-list portfolio-list active">
+              <h3>My Work</h3>
+            </div>
+            <div class="tab-list portfolio-list">
+              <h3>My Service</h3>
+            </div>
+          </div>
+          <div class="tab-wrapper">
+            <div class="tab-grid portfolio-box work active">
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/work1.jpg" alt="" />
+                </div>
+                <div class="work-info">
+                  <h4>Frontend Project</h4>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nesciunt, dolorem.
+                  </p>
+                  <div class="tech-used">
+                    <p>HTML5, CSS3,Javascript</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class="bx bx-arrow-back"></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="#">
+                      <i class='bx bxl-github' ></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/work2.jpg" alt="" />
+                </div>
+                <div class="work-info">
+                  <h4>FUll Stack Project</h4>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nesciunt, dolorem.
+                  </p>
+                  <div class="tech-used">
+                    <p>Next.js, Tailwind.css, Node.js</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class="bx bx-arrow-back"></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="#">
+                      <i class='bx bxl-github' ></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/work3.jpg" alt="" />
+                </div>
+                <div class="work-info">
+                  <h4>Frontend Project</h4>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nesciunt, dolorem.
+                  </p>
+                  <div class="tech-used">
+                    <p>React.js, Tailwind.css</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class="bx bx-arrow-back"></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="#">
+                      <i class='bx bxl-github' ></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/work4.jpg" alt="">
+                </div>
+                <div class="work-info">
+                  <h4>Frontend Project</h4>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+                  <div class="tech-used">
+                    <p>HTML5,Bootstrap,Javascript</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class='bx bx-arrow-back'></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="#">
+                      <i class='bx bxl-github' ></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/work5.jpg" alt="">
+                </div>
+                <div class="work-info">
+                  <h4>Frontend Project</h4>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+                  <div class="tech-used">
+                    <p>Next.js, Tailwind.css</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class='bx bx-arrow-back'></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="#">
+                      <i class='bx bxl-github' ></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+            <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/work6.jpg" alt="">
+                </div>
+                <div class="work-info">
+                  <h4>Full Stack Project</h4>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+                  <div class="tech-used">
+                    <p>Next.js, Tailwind.css, Node.js</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class='bx bx-arrow-back'></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="#">
+                      <i class='bx bxl-github' ></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="tab-grid portfolio-box service">
+              <div class="tab-item portfolio-item">
+                <p>service TEST</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <!--Contact section-->
       </div>
     </div>
