--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="box">
         <!--home section-->
-        <section class="section home">
+        <section class="section home active">
           <div class="home-info">
             <h3>Hello I'm</h3>
             <h1>Samridhi</h1>
@@ -85,7 +85,7 @@
         <section class="section about">
           <div class="img-wrapper">
             <div class="img-box about-img">
-              <img src="samridhi.jpg" alt="" />
+              <img src="images/samridhi.jpg" alt="" />
             </div>
           </div>
 
@@ -297,9 +297,9 @@
                 </p>
               </div>
               <div class="tab-item resume-item">
-                <h4>2019-2020</h4>
-                <h4>10th Pass</h4>
-                <h4>CBSE</h4>
+                <h4>2022-2023</h4>
+                <h4>Programming Certificate</h4>
+                <h4>By Institute</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Saepe quos qui accusantium eius possimus veniam earum quo
@@ -307,9 +307,9 @@
                 </p>
               </div>
               <div class="tab-item resume-item">
-                <h4>2020-2021</h4>
-                <h4>12th Pass</h4>
-                <h4>CBSE</h4>
+                <h4>2023-2024</h4>
+                <h4>UI Designer</h4>
+                <h4>By Institute</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Saepe quos qui accusantium eius possimus veniam earum quo
@@ -351,7 +351,7 @@
                       <span class="tooltip">Preview</span>
                     </a>
                     <a href="#">
-                      <i class='bx bxl-github' ></i>
+                      <i class="bx bxl-github"></i>
                       <span class="tooltip">Github Repository</span>
                     </a>
                   </div>
@@ -377,7 +377,7 @@
                       <span class="tooltip">Preview</span>
                     </a>
                     <a href="#">
-                      <i class='bx bxl-github' ></i>
+                      <i class="bx bxl-github"></i>
                       <span class="tooltip">Github Repository</span>
                     </a>
                   </div>
@@ -402,7 +402,7 @@
                       <span class="tooltip">Preview</span>
                     </a>
                     <a href="#">
-                      <i class='bx bxl-github' ></i>
+                      <i class="bx bxl-github"></i>
                       <span class="tooltip">Github Repository</span>
                     </a>
                   </div>
@@ -411,21 +411,24 @@
 
               <div class="tab-item portfolio-item">
                 <div class="work-img">
-                  <img src="images/work4.jpg" alt="">
+                  <img src="images/work4.jpg" alt="" />
                 </div>
                 <div class="work-info">
                   <h4>Frontend Project</h4>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nesciunt, dolorem.
+                  </p>
                   <div class="tech-used">
                     <p>HTML5,Bootstrap,Javascript</p>
                   </div>
                   <div class="portfolio-icon work-icon">
                     <a href="#">
-                      <i class='bx bx-arrow-back'></i>
+                      <i class="bx bx-arrow-back"></i>
                       <span class="tooltip">Preview</span>
                     </a>
                     <a href="#">
-                      <i class='bx bxl-github' ></i>
+                      <i class="bx bxl-github"></i>
                       <span class="tooltip">Github Repository</span>
                     </a>
                   </div>
@@ -434,60 +437,157 @@
 
               <div class="tab-item portfolio-item">
                 <div class="work-img">
-                  <img src="images/work5.jpg" alt="">
+                  <img src="images/work5.jpg" alt="" />
                 </div>
                 <div class="work-info">
                   <h4>Frontend Project</h4>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nesciunt, dolorem.
+                  </p>
                   <div class="tech-used">
                     <p>Next.js, Tailwind.css</p>
                   </div>
                   <div class="portfolio-icon work-icon">
                     <a href="#">
-                      <i class='bx bx-arrow-back'></i>
+                      <i class="bx bx-arrow-back"></i>
                       <span class="tooltip">Preview</span>
                     </a>
                     <a href="#">
-                      <i class='bx bxl-github' ></i>
+                      <i class="bx bxl-github"></i>
                       <span class="tooltip">Github Repository</span>
                     </a>
                   </div>
                 </div>
               </div>
 
-            <div class="tab-item portfolio-item">
+              <div class="tab-item portfolio-item">
                 <div class="work-img">
-                  <img src="images/work6.jpg" alt="">
+                  <img src="images/work6.jpg" alt="" />
                 </div>
                 <div class="work-info">
                   <h4>Full Stack Project</h4>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nesciunt, dolorem.
+                  </p>
                   <div class="tech-used">
                     <p>Next.js, Tailwind.css, Node.js</p>
                   </div>
                   <div class="portfolio-icon work-icon">
                     <a href="#">
-                      <i class='bx bx-arrow-back'></i>
+                      <i class="bx bx-arrow-back"></i>
                       <span class="tooltip">Preview</span>
                     </a>
                     <a href="#">
-                      <i class='bx bxl-github' ></i>
+                      <i class="bx bxl-github"></i>
                       <span class="tooltip">Github Repository</span>
                     </a>
                   </div>
                 </div>
               </div>
-
             </div>
 
             <div class="tab-grid portfolio-box service">
               <div class="tab-item portfolio-item">
-                <p>service TEST</p>
+                <div class="portfolio-icon service-icon">
+                  <i class="bx bx-code-alt icon"></i>
+                  <a href="#"><i class="bx bx-arrow-back"></i></a>
+                </div>
+                <h4>Web Development</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                  velit rerum culpa facere est minus, illum doloremque aliquid
+                  consectetur laudantium?
+                </p>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="portfolio-icon service-icon">
+                  <i class="bx bx-code-curly icon"></i>
+                  <a href="#"><i class="bx bx-arrow-back"></i></a>
+                </div>
+                <h4>Frontend Developer</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                  velit rerum culpa facere est minus, illum doloremque aliquid
+                  consectetur laudantium?
+                </p>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="portfolio-icon service-icon">
+                  <i class="bx bxs-paint icon"></i>
+                  <a href="#"><i class="bx bx-arrow-back"></i></a>
+                </div>
+                <h4>UI/UX Design</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                  velit rerum culpa facere est minus, illum doloremque aliquid
+                  consectetur laudantium?
+                </p>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="portfolio-icon service-icon">
+                  <i class="bx bx-signal-5 icon"></i>
+                  <a href="#"><i class="bx bx-arrow-back"></i></a>
+                </div>
+                <h4>SEO</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                  velit rerum culpa facere est minus, illum doloremque aliquid
+                  consectetur laudantium?
+                </p>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="portfolio-icon service-icon">
+                  <i class="bx bx-slideshow icon"></i>
+                  <a href="#"><i class="bx bx-arrow-back"></i></a>
+                </div>
+                <h4>Junior Developer</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                  velit rerum culpa facere est minus, illum doloremque aliquid
+                  consectetur laudantium?
+                </p>
+              </div>
+
+              <div class="tab-item portfolio-item">
+                <div class="portfolio-icon service-icon">
+                  <i class="bx bx-camera icon"></i>
+                  <a href="#"><i class="bx bx-arrow-back"></i></a>
+                </div>
+                <h4>Photography</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                  velit rerum culpa facere est minus, illum doloremque aliquid
+                  consectetur laudantium?
+                </p>
               </div>
             </div>
           </div>
         </section>
         <!--Contact section-->
+        <section class="section contact active">
+          <h2 class="title">Contact</h2>
+          <div class="contact-wrapper">
+            <form action="" class="contact-form">
+              <h3>Let's Work Together!</h3>
+              <div class="field-box">
+                <input type="text" placeholder="Full Name" required>
+                <input type="email" placeholder="Email Address" required>
+                <input type="text" placeholder="Phone Number" required>
+                <input type="text" placeholder="Email Subject" required>
+                <textarea name="" id="" placeholder="Your Message" required></textarea>
+              </div>
+              <div class="contact-btn">
+                <button type="submit" class="btn">Send Message</button>
+              </div>
+            </form>
+          </div>
+        </section>
       </div>
     </div>
 
